--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
     <fa-icon icon="tachometer-alt"></fa-icon>&nbsp;&nbsp;
     {{'Home_Component.btnDashboard'| translate}}
   </button>
-    <button mat-raised-button color="primary" [routerLink]="['/create']" >
+    <button mat-raised-button color="primary" [routerLink]="['/clients/create']" >
     <fa-icon icon="user-plus"></fa-icon> &nbsp;&nbsp;
     {{'Home_Component.btnNewCustomer'| translate}}
   </button>
@@ -14,7 +14,7 @@
   </button>
 </div>
 
-<div fxLayout="row" fxLayout.lt-md="column" fxFill fxLayoutAlign="space-around start"     
+<div fxLayout="row" fxLayout.lt-md="column" fxFill fxLayoutAlign="space-around start"
   class="container m-b-20">
 
   <mat-card fxFlex.gt-md="70" fxFlexOrder.gt-xs="2" fxFlexOrder.gt-md="1">
