--- a/src/app/clients/clients-view/identities-tab/add-identities/add-identities.component.html
+++ b/src/app/clients/clients-view/identities-tab/add-identities/add-identities.component.html
@@ -1,4 +1,4 @@
-<!--<h1 mat-dialog-title>{{ data.title }}</h1>-->
+<!--<h1 mat-dialog-title>Add Client Identifier</h1>-->
 
 <!--<div mat-dialog-content [formGroup]="form" [fxLayout]="layout.columns > 1 ? 'row wrap' : 'column'" fxLayout.lt-md="column" [fxLayoutGap]="(layout.columns > 1 ? layout.gap : 0) + '%'" fxLayoutGap.lt-md="0%">-->
 
