--- a/src/app/groups/edit-group/edit-group.component.html
+++ b/src/app/groups/edit-group/edit-group.component.html
@@ -27,6 +27,39 @@
               </mat-option>
             </mat-select>
           </mat-form-field>
+          <mat-form-field>
+            <mat-label>Type</mat-label>
+            <mat-select formControlName="groupTypeId" [(ngModel)]="groupTypeId">
+              <mat-option *ngFor="let type of groupType" [value]="type.key" > 
+              {{ type.value }}
+              </mat-option>
+            </mat-select>
+          </mat-form-field>
+
+          <table mat-table [dataSource]="dataSource" class="mat-elevation" style="width: 100%;">
+            <ng-container matColumnDef="cardDescription">
+              <th mat-header-cell *matHeaderCellDef> Loại thẻ </th>
+              <td mat-cell *matCellDef="let element">
+                <input matInput  readonly value="{{element.cardDescription}}"/>
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="minValue">
+              <th mat-header-cell *matHeaderCellDef> Phí rút </th>
+              <td mat-cell *matCellDef="let element, let index"> 
+                  <input matInput  (keyup)="onKey($event, index)" id="{{element.cardType}}_minValue" value="{{element.minValue}}"> 
+              </td>
+            </ng-container>
+
+            <ng-container matColumnDef="maxValue">
+              <th mat-header-cell *matHeaderCellDef> Phí đáo hạn </th>
+              <td mat-cell *matCellDef="let element, let index"> 
+                  <input matInput (keyup)="onKey($event,index)" id="{{element.cardType}}_maxValue" value="{{element.maxValue}}"> 
+              </td>
+            </ng-container>
+            <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+            <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+          </table>
 
           <mat-form-field *ngIf="this.editGroupForm.contains('activationDate')">
             <mat-label>Activation Date</mat-label>
