--- a/src/app/clients/client-stepper/client-general-step/client-general-step.component.html
+++ b/src/app/clients/client-stepper/client-general-step/client-general-step.component.html
@@ -125,6 +125,7 @@
               placeholder="CMND hai mat"
               type="file"
               multiple
+              accept="image/*"
               (change)="fileChange($event)"
             >
           </div>
