--- a/src/app/clients/client-stepper/client-general-step/client-general-step.component.scss
+++ b/src/app/clients/client-stepper/client-general-step/client-general-step.component.scss
@@ -34,3 +34,11 @@
 .card-custom {
   margin-top: 8px;
 }
+
+.readonly-wrapper {
+  cursor: not-allowed;
+}
+
+.readonly-wrapper .readonly-block {
+  pointer-events: none;
+}
