--- a/src/app/groups/create-group/create-group.component.html
+++ b/src/app/groups/create-group/create-group.component.html
@@ -9,30 +9,27 @@
         <div fxLayout="column">
 
           <mat-form-field>
-            <mat-label>Name</mat-label>
+            <mat-label>{{ 'Group_Component.Create_Group_Component.labelName'| translate}}</mat-label>
             <input matInput required formControlName="name">
-            <mat-error *ngIf="groupForm.controls.name.hasError('required')">
-              Group Name is <strong>required</strong>
+            <mat-error *ngIf="groupForm.controls.name.hasError('required')" [innerHTML]="'Group_Component.Create_Group_Component.labelGroupNameMsgRequired' |translate">
             </mat-error>
-            <mat-error *ngIf="groupForm.controls.name.hasError('pattern')">
-              Group Name <strong>cannot</strong> begin with a special character or number
+            <mat-error *ngIf="groupForm.controls.name.hasError('pattern')" [innerHTML]="'Group_Component.Create_Group_Component.labelGroupNameMsgPattern' |translate">
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Office</mat-label>
+            <mat-label>{{ 'Group_Component.Create_Group_Component.labelOffice'| translate}}</mat-label>
             <mat-select required formControlName="officeId">
               <mat-option *ngFor="let office of officeData" [value]="office.id">
               {{ office.name }}
               </mat-option>
             </mat-select>
-            <mat-error *ngIf="groupForm.controls.officeId.hasError('required')">
-              Office is <strong>required</strong>
+            <mat-error *ngIf="groupForm.controls.officeId.hasError('required')" [innerHTML]="'Group_Component.Create_Group_Component.labelGroupOfficeMsgRequired' |translate">
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Staff</mat-label>
+            <mat-label>{{ 'Group_Component.Create_Group_Component.labelStaff'| translate}}</mat-label>
             <mat-select formControlName="staffId">
               <mat-option *ngFor="let staff of staffData" [value]="staff.id">
               {{ staff.displayName }}
@@ -40,37 +37,43 @@
             </mat-select>
           </mat-form-field>
           <mat-form-field>
-            <mat-label>Type</mat-label>
-            <mat-select formControlName="groupType">
-              <mat-option *ngFor="let type of groupType" [value]="type.value"> 
+            <mat-label>{{ 'Group_Component.Create_Group_Component.labelType'| translate}}</mat-label>
+            <mat-select formControlName="groupTypeId">
+              <mat-option *ngFor="let type of groupType" [value]="groupTypeId"> 
               {{ type.viewValue }}
               </mat-option>
             </mat-select>
           </mat-form-field>
 
           <mat-checkbox labelPosition="before" formControlName="active">
-            Active
+            {{ 'Group_Component.Create_Group_Component.CheckboxActive'| translate}}
           </mat-checkbox>
 
-          <table mat-table [dataSource]="dataSource" class="mat-elevation" style="width: 100%;">
+          <table mat-table [dataSource]="dataSource" class="mat-elevation">
             <ng-container matColumnDef="cardDescription">
-              <th mat-header-cell *matHeaderCellDef> Loại thẻ </th>
+              <th mat-header-cell *matHeaderCellDef>{{ 'Group_Component.Create_Group_Component.tableColCartType'| translate}}</th>
               <td mat-cell *matCellDef="let element">
-                <input matInput  readonly value="{{element.cardDescription}}"/>
+                <mat-form-field>
+                  <input matInput  readonly value="{{element.cardDescription}}"/>
+                </mat-form-field>
               </td>
             </ng-container>
 
             <ng-container matColumnDef="minValue">
-              <th mat-header-cell *matHeaderCellDef> Phí rút </th>
-              <td mat-cell *matCellDef="let element, let index"> 
+              <th mat-header-cell *matHeaderCellDef>{{ 'Group_Component.Create_Group_Component.tableColFeeWithDraw'| translate}}</th>
+              <td mat-cell mat-body-row-fee *matCellDef="let element, let index">
+                <mat-form-field>
                   <input matInput  (keypress)="onKey($event, index)" id="{{element.cardType}}_minValue" value="{{element.minValue}}"> 
+                </mat-form-field>
               </td>
             </ng-container>
 
             <ng-container matColumnDef="maxValue">
-              <th mat-header-cell *matHeaderCellDef> Phí đáo hạn </th>
-              <td mat-cell *matCellDef="let element, let index"> 
+              <th mat-header-cell *matHeaderCellDef>{{ 'Group_Component.Create_Group_Component.tableColFeeRollTerm'| translate}}</th>
+              <td mat-cell mat-body-row-fee *matCellDef="let element, let index">
+                <mat-form-field>
                   <input matInput (keypress)="onKey($event,index)" id="{{element.cardType}}_maxValue" value="{{element.maxValue}}"> 
+                </mat-form-field>
               </td>
             </ng-container>
             <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -78,32 +81,30 @@
           </table>
 
           <mat-form-field *ngIf="this.groupForm.controls.active.value">
-            <mat-label>Activation Date</mat-label>
+            <mat-label>{{ 'Group_Component.Create_Group_Component.labelActivationDate'| translate}}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="activationDatePicker" required formControlName="activationDate">
             <mat-datepicker-toggle matSuffix [for]="activationDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #activationDatePicker></mat-datepicker>
-            <mat-error *ngIf="groupForm.controls.activationDate.hasError('required')">
-              Activation Date is <strong>required</strong>
+            <mat-error *ngIf="groupForm.controls.activationDate.hasError('required')" [innerHTML]="'Group_Component.Create_Group_Component.labelGroupActivationDateMsgRequired' |translate">
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>External id</mat-label>
+            <mat-label>{{ 'Group_Component.Create_Group_Component.labelExternal'| translate}}</mat-label>
             <input matInput formControlName="externalId">
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Submitted on</mat-label>
+            <mat-label>{{ 'Group_Component.Create_Group_Component.labelSubmittedOn'| translate}}</mat-label>
             <input matInput [min]="minDate" [max]="maxDate" [matDatepicker]="submittedOnDatePicker" required formControlName="submittedOnDate">
             <mat-datepicker-toggle matSuffix [for]="submittedOnDatePicker"></mat-datepicker-toggle>
             <mat-datepicker #submittedOnDatePicker></mat-datepicker>
-            <mat-error *ngIf="groupForm.controls.submittedOnDate.hasError('required')">
-              Submission Date is <strong>required</strong>
+            <mat-error *ngIf="groupForm.controls.submittedOnDate.hasError('required')" [innerHTML]="'Group_Component.Create_Group_Component.labelGroupSubmittedOnMsgRequired' |translate">
             </mat-error>
           </mat-form-field>
 
           <mat-form-field>
-            <mat-label>Add Clients</mat-label>
+            <mat-label>{{ 'Group_Component.Create_Group_Component.labelAddClients'| translate}}</mat-label>
             <input matInput [formControl]="clientChoice" [matAutocomplete]="clientsAutocomplete">
           </mat-form-field>
   
@@ -125,21 +126,21 @@
               </button>
             </div>
             <div class="mat-row">
-              <div class="mat-cell">Name</div>
+              <div class="mat-cell">{{ 'Group_Component.Create_Group_Component.tableColName'| translate}}</div>
               <div class="mat-cell">{{clientChoice.value.displayName}}</div>
             </div>
             <div class="mat-row">
-              <div class="mat-cell">Id</div>
+              <div class="mat-cell">{{ 'Group_Component.Create_Group_Component.tableColId'| translate}}</div>
               <div class="mat-cell">{{clientChoice.value.id}}</div>
             </div>
             <div class="mat-row">
-              <div class="mat-cell">Office</div>
+              <div class="mat-cell">{{ 'Group_Component.Create_Group_Component.tableColOfficeName'| translate}}</div>
               <div class="mat-cell">{{clientChoice.value.officeName}}</div>
             </div>
           </div>
 
           <mat-nav-list *ngIf="clientMembers.length">
-            <h3 matSubheader>Selected Clients</h3>
+            <h3 matSubheader>{{ 'Group_Component.Create_Group_Component.labelSelectedClients'| translate}}</h3>
             <div mat-list-item *ngFor="let client of clientMembers index as i">
               <button mat-icon-button (click)="removeClient(i)">
                 <fa-icon icon="trash"></fa-icon>
@@ -153,8 +154,8 @@
       </mat-card-content>
 
       <mat-card-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="5px">
-        <button type="button" mat-raised-button [routerLink]="['../']">Cancel</button>
-        <button mat-raised-button color="primary" [disabled]="!groupForm.valid" (click)="submit()">Submit</button>
+        <button type="button" mat-raised-button [routerLink]="['../']">{{ 'Group_Component.Create_Group_Component.btnCancel'| translate}}</button>
+        <button mat-raised-button color="primary" [disabled]="!groupForm.valid" (click)="submit()">{{ 'Group_Component.Create_Group_Component.btnSubmit'| translate}}</button>
       </mat-card-actions>
 
     </form>
