--- a/src/app/groups/create-group/create-group.component.scss
+++ b/src/app/groups/create-group/create-group.component.scss
@@ -5,7 +5,7 @@
 .mat-table {
   display: block;
   font-family: Tahoma, Verdana;
-  width: 50%;
+  width: 100%;
 }
 
 .mat-row,
@@ -23,4 +23,16 @@
   flex: 1;
   overflow: hidden;
   word-wrap: break-word;
+}
+
+.mat-row,
+.mat-body-row-fee {
+  display: flex;
+  border-bottom-width: 1px;
+  border-bottom-style: solid;
+  align-items: center;
+  min-height: 48px;
+  padding: 0 0px;
+//  background-color: brown;
+  text-align: right;
 }
