--- a/src/app/groups/groups.component.html
+++ b/src/app/groups/groups.component.html
@@ -3,16 +3,16 @@
   <div fxLayout="row" fxLayoutAlign="start center">
     <div class="search-box">
       <mat-form-field>
-        <input matInput placeholder="Search by Name" [formControl]="name">
+        <input matInput placeholder="{{ 'Group_Component.placeholderSearchByName'| translate}}" [formControl]="name">
       </mat-form-field>
-      <mat-checkbox #showClosedGroups labelPosition="after" (change)="changeShowClosedGroups()">Show Closed Groups</mat-checkbox>
+      <mat-checkbox #showClosedGroups labelPosition="after" (change)="changeShowClosedGroups()">{{ 'Group_Component.labelShowClosedGroups'| translate}}</mat-checkbox>
     </div>
     <div class="action-button" fxLayoutGap="25px">
       <button mat-raised-button color="primary" [routerLink]="['../', 'organization', 'bulk-import', 'Groups']">
-        <fa-icon icon="download"></fa-icon>&nbsp;&nbsp;Import Group
+        <fa-icon icon="download"></fa-icon>&nbsp;&nbsp;{{ 'Group_Component.btnBulkImport'| translate}}
       </button>
       <button mat-raised-button color="primary" [routerLink]="['create']" *mifosxHasPermission="'CREATE_GROUP'">
-        <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;Create Group
+        <fa-icon icon="plus"></fa-icon>&nbsp;&nbsp;{{ 'Group_Component.btnCreate'| translate}}
       </button>
     </div>
   </div>
@@ -20,22 +20,22 @@
   <table mat-table [dataSource]="dataSource" matSort>
 
     <ng-container matColumnDef="name">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'Group_Component.tableColName'| translate}} </th>
       <td mat-cell *matCellDef="let group"> {{ group.name }} </td>
     </ng-container>
 
     <ng-container matColumnDef="accountNo">
-      <th mat-header-cell *matHeaderCellDef> Account # </th>
+      <th mat-header-cell *matHeaderCellDef> {{ 'Group_Component.tableColAccountNo'| translate}} </th>
       <td mat-cell *matCellDef="let group"> {{ group.accountNo }} </td>
     </ng-container>
 
     <ng-container matColumnDef="externalId">
-      <th mat-header-cell *matHeaderCellDef> ExternalID </th>
+      <th mat-header-cell *matHeaderCellDef> {{ 'Group_Component.tableColExternalId'| translate}} </th>
       <td mat-cell *matCellDef="let group"> {{ group.externalId }} </td>
     </ng-container>
 
     <ng-container matColumnDef="status">
-      <th mat-header-cell *matHeaderCellDef> Status </th>
+      <th mat-header-cell *matHeaderCellDef> {{ 'Group_Component.tableColStatus'| translate}} </th>
       <td mat-cell *matCellDef="let row">
         <div [ngClass]="row.status.code|statusLookup">
           <fa-icon icon="stop"></fa-icon>
@@ -44,7 +44,7 @@
     </ng-container>
 
     <ng-container matColumnDef="officeName">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> Office Name </th>
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ 'Group_Component.tableColOfficeName'| translate}} </th>
       <td mat-cell *matCellDef="let group"> {{ group.officeName }} </td>
     </ng-container>
 
