--- a/src/theme/custom/denim-yellowgreen.scss
+++ b/src/theme/custom/denim-yellowgreen.scss
@@ -13,7 +13,7 @@
 // Custom material palette
 $mat-denim: (
   100: #5ba2ec,
-  500: #1074b9,
+  500: #3b74ff,
   700: #004989,
   contrast: (
     100: $dark-primary-text,
