--- a/src/app/clients/clients-view/identities-tab/add-identities/add-identities.component.html
+++ b/src/app/clients/clients-view/identities-tab/add-identities/add-identities.component.html
@@ -1,6 +1,7 @@
 <h1 mat-dialog-title>Add Client Identifier</h1>
 
-<div mat-dialog-content [formGroup]="form" [fxLayout]="'column'" fxLayout.lt-md="column" [fxLayoutGap]="'1%'" fxLayoutGap.lt-md="0%">
+<div mat-dialog-content [formGroup]="form" [fxLayout]="'column'" fxLayout.lt-md="column" [fxLayoutGap]="'1%'"
+     fxLayoutGap.lt-md="0%">
   <mat-form-field fxFlex="96%">
     <mat-label>{{'Client_Component.ViewClient.TabIdentities.selectDocumentType' |translate}}</mat-label>
     <mat-select formControlName="documentTypeId">
@@ -26,21 +27,39 @@
 
   <mat-form-field *ngIf="form.contains('documentCardType')" fxFlex="96%">
     <mat-label>{{'Client_Component.ViewClient.TabIdentities.selectCardType' |translate}}</mat-label>
-    <mat-select [disabled]="isTeller" formControlName="documentCardType" >
+    <mat-select disabled formControlName="documentCardType">
       <mat-option *ngFor="let sa of documentCardTypes" [value]="sa.code">
         {{ sa.description }}
       </mat-option>
     </mat-select>
   </mat-form-field>
 
-  <mat-form-field *ngIf="form.contains('dueDay')"  fxFlex="48%">
+  <mat-form-field *ngIf="form.contains('dueDay')" fxFlex="48%">
     <mat-label>Ngày đáo hạn thẻ:</mat-label>
-    <input matInput  type="number" [max]="31" [min]="0" formControlName="dueDay">
+    <input
+      pattern
+      maxlength="2"
+      matInput type="number" max="31" min="0" formControlName="dueDay">
   </mat-form-field>
 
-  <mat-form-field *ngIf="form.contains('expiredDate')"  fxFlex="48%">
+  <mat-form-field *ngIf="form.contains('expiredDate')" fxFlex="48%">
     <mat-label>Ngày hết hạn thẻ:</mat-label>
-    <input matInput formControlName="expiredDate">
+    <input
+      matInput
+      maxlength="5"
+      minlength="5"
+      type="text"
+      [dropSpecialCharacters]="false" mask="00/00"
+      formControlName="expiredDate">
+  </mat-form-field>
+
+  <mat-form-field fxFlex="96%" *ngIf="form.contains('status')">
+    <mat-label>{{'Client_Component.ViewClient.TabIdentities.selectStatus' |translate}}</mat-label>
+    <mat-select [disabled]="isTeller" formControlName="status">
+      <mat-option *ngFor="let sa of statusOptions" [value]="sa.value">
+        {{ sa.value }}
+      </mat-option>
+    </mat-select>
   </mat-form-field>
 
   <mat-form-field fxFlex="96%">
@@ -51,5 +70,7 @@
 
 <mat-dialog-actions fxLayout="row" fxLayout.xs="column" fxLayoutAlign="center" fxLayoutGap="2%">
   <button mat-raised-button mat-dialog-close>{{ 'Shared_Component.FormDialog.btnCancel' | translate }}</button>
-  <button mat-raised-button color="primary" [mat-dialog-close]="{ data: form }" [disabled]="!form.valid || form.pristine">{{ 'Shared_Component.FormDialog.btnAdd' |translate }}</button>
+  <button mat-raised-button color="primary"
+          [mat-dialog-close]="{ data: form,documentTypes:documentTypes,existBin:existBin }"
+          [disabled]="!form.valid || form.pristine">{{ 'Shared_Component.FormDialog.btnAdd' |translate }}</button>
 </mat-dialog-actions>
