--- a/src/app/clients/clients-view/general-tab/general-tab.component.html
+++ b/src/app/clients/clients-view/general-tab/general-tab.component.html
@@ -92,6 +92,11 @@
         {{element.accountNo}} </td>
     </ng-container>
 
+    <ng-container matColumnDef="External Id">
+      <th mat-header-cell *matHeaderCellDef> External Id</th>
+      <td mat-cell *matCellDef="let element"> {{element?.externalId || 'N/A'}} </td>
+    </ng-container>
+
     <ng-container matColumnDef="Saving Account">
       <th mat-header-cell *matHeaderCellDef> Saving Account</th>
       <td mat-cell *matCellDef="let element"> {{element.productName}} </td>
@@ -334,6 +339,10 @@
       <td mat-cell *matCellDef="let element"><i class="fa fa-stop" [ngClass]="element.status.code|statusLookup"></i>
         {{element.accountNo}} </td>
     </ng-container>
+    <ng-container matColumnDef="External Id">
+      <th mat-header-cell *matHeaderCellDef> External Id</th>
+      <td mat-cell *matCellDef="let element"> {{element?.externalId || 'N/A'}} </td>
+    </ng-container>
 
     <ng-container matColumnDef="Saving Account">
       <th mat-header-cell *matHeaderCellDef> Saving Account</th>
@@ -426,6 +435,10 @@
       <th mat-header-cell *matHeaderCellDef> Account No.</th>
       <td mat-cell *matCellDef="let element"><i class="fa fa-stop" [ngClass]="element.status.code|statusLookup"></i>
         {{element.accountNo}} </td>
+    </ng-container>
+    <ng-container matColumnDef="External Id">
+      <th mat-header-cell *matHeaderCellDef> External Id</th>
+      <td mat-cell *matCellDef="let element"> {{element?.externalId || 'N/A'}} </td>
     </ng-container>
 
     <ng-container matColumnDef="Saving Account">
