--- a/src/app/savings/savings-account-view/transactions-tab/transactions-tab.component.html
+++ b/src/app/savings/savings-account-view/transactions-tab/transactions-tab.component.html
@@ -40,13 +40,13 @@
       </ng-container>
 
       <ng-container matColumnDef="balance">
-        <th mat-header-cell *matHeaderCellDef> Balance </th>
-        <td mat-cell *matCellDef="let transaction"> {{ transaction.runningBalance }} </td>
+        <th mat-header-cell *matHeaderCellDef> {{'Saving_Account_Component.tabTransactions.labelBalance'|translate}} </th>
+        <td mat-cell *matCellDef="let transaction"> {{ transaction.runningBalance | money }} </td>
       </ng-container>
 
       <ng-container matColumnDef="viewReciept">
         <th mat-header-cell *matHeaderCellDef> View Reciept </th>
-        <td mat-cell *matCellDef="let transaction"> 
+        <td mat-cell *matCellDef="let transaction">
           <button class="account-action-button" mat-raised-button color="primary" (click)="routeEdit($event)" [routerLink]="[transaction.id, 'reciept']">
             <i class="fa fa-file" matTooltip="View Reciept"></i>
           </button>
