--- a/src/app/savings/savings-account-view/form-dialog/advance/advance.component.html
+++ b/src/app/savings/savings-account-view/form-dialog/advance/advance.component.html
@@ -1,30 +1,25 @@
-<h1 mat-dialog-title>Ứng tiền cho khách</h1>
+<h1 mat-dialog-title>{{'Saving_Account_Component.clientAdvanceCash.titleClientAdvanceCash' |translate}}</h1>
 
 <div mat-dialog-content [formGroup]="form" [fxLayout]="'column'" fxLayout.lt-md="column" [fxLayoutGap]="'1%'"
      fxLayoutGap.lt-md="0%">
-  <mat-form-field fxFlex="96%">
-    <mat-label>{{'Client_Component.ViewClient.TabIdentities.selectDocumentType' |translate}}</mat-label>
-    <mat-select formControlName="clientAdvanceCash">
-      <mat-option *ngFor="let client of clients" [value]="client.id">
-        {{ client.name }}
+
+  <mat-form-field class="select-book">
+    <mat-label>{{'Saving_Account_Component.clientAdvanceCash.labelClientCash' |translate}}</mat-label>
+    <input required type="text" placeholder="{{'Saving_Account_Component.clientAdvanceCash.labelClientCash' |translate}}" matInput formControlName="clientAdvanceCash" [matAutocomplete]="auto">
+    <mat-autocomplete #auto="matAutocomplete" [displayWith]="displayFn">
+      <mat-option *ngFor="let cl of filteredClient" [value]="cl">
+        {{cl.displayName}}
       </mat-option>
-    </mat-select>
+    </mat-autocomplete>
+    <mat-error *ngIf="client.hasError('required')">
+      Yêu cầu: chọn khách hàng
+    </mat-error>
   </mat-form-field>
 
-  <mat-form-field>
-    <mat-select [formControl]="clientCtrl" placeholder="Chọn " #singleSelect>
-      <mat-option>
-        <ngx-mat-select-search [formControl]="clientFilterCtrl"></ngx-mat-select-search>
-      </mat-option>
-      <mat-option *ngFor="let client of clients | async" [value]="client">
-        {{client.name}}
-      </mat-option>
-    </mat-select>
-  </mat-form-field>
 
-  <mat-form-field fxFlex="96%" *ngIf="form.contains('documentCardBank')">
-    <mat-label>{{'Client_Component.ViewClient.TabIdentities.selectBank' |translate}}</mat-label>
-    <mat-select formControlName="typeAdvanceCash">
+  <mat-form-field fxFlex="96%" *ngIf="form.contains('typeAdvanceCash')">
+    <mat-label>{{'Saving_Account_Component.clientAdvanceCash.labelTypes' |translate}}</mat-label>
+    <mat-select required formControlName="typeAdvanceCash">
       <mat-option *ngFor="let type of typeAdvanceCashes" [value]="type.id">
         {{ type.value }}
       </mat-option>
@@ -32,14 +27,16 @@
   </mat-form-field>
 
   <mat-form-field fxFlex="96%">
-    <mat-label>{{'Client_Component.ViewClient.TabIdentities.inputUniqueId' |translate}}</mat-label>
-    <input matInput formControlName="amountAdvance">
+    <mat-label>{{'Saving_Account_Component.clientAdvanceCash.labelAmountAdvance' |translate}}</mat-label>
+    <input required
+           currencyMask
+           matInput formControlName="amountAdvance">
   </mat-form-field>
 
 
 
-  <mat-form-field *ngIf="form.contains('dueDay')" fxFlex="48%">
-    <mat-label>Ngày đáo hạn thẻ:</mat-label>
+  <mat-form-field *ngIf="form.contains('noteAdvance')" fxFlex="48%">
+    <mat-label>{{'Saving_Account_Component.clientAdvanceCash.labelNoteAdvance' |translate}}</mat-label>
     <input type="text" aria-multiline="true" matInput formControlName="noteAdvance">
   </mat-form-field>
 
