--- a/src/app/savings/savings-account-view/savings-account-view.component.html
+++ b/src/app/savings/savings-account-view/savings-account-view.component.html
@@ -39,7 +39,7 @@
 
     <mat-card-actions class="account-actions">
 
-      <ng-container *ngFor="let button of buttonConfig.singleButtons">
+      <ng-container *ngFor="let button of buttonConfig?.singleButtons">
         <button mat-raised-button *mifosxHasPermission="button.taskPermissionName" (click)="doAction(button.action)">
           <i class="{{button.icon}}"></i> {{button.name | translate}}</button>
       </ng-container>
@@ -68,10 +68,6 @@
         <h4 class="table-headers">{{'Saving_Account_Component.ViewSavingAccount.labelAccountSummary'|translate}}</h4>
         <table>
           <tbody>
-          <tr *ngIf="savingsAccountData.summary.totalWithdrawals">
-            <td>Total Withdrawls</td>
-            <td>{{savingsAccountData.currency.displaySymbol}}&nbsp;{{savingsAccountData.summary.totalWithdrawals}}</td>
-          </tr>
           <tr *ngIf="savingsAccountData.summary.totalWithdrawalFees">
             <td>Withdrawals Fees</td>
             <td>{{savingsAccountData.currency.displaySymbol}}&nbsp;{{savingsAccountData.summary.totalWithdrawalFees}}</td>
@@ -256,17 +252,21 @@
         </ng-template>
 
         <div *ngIf="!savingsAccountData.status.rejected && !savingsAccountData.status.submittedAndPendingApproval">
-          <h4 class="table-headers">Performance History</h4>
+          <h4 class="table-headers">{{'Saving_Account_Component.ViewSavingAccount.labelPerformanceHistory'|translate}}</h4>
           <table>
             <tbody>
             <tr *ngIf="savingsAccountData.summary.totalDeposits">
-              <td>Total Deposits</td>
-              <td>{{savingsAccountData.currency.displaySymbol}}&nbsp;{{savingsAccountData.summary.totalDeposits}}</td>
+              <td>{{'Saving_Account_Component.ViewSavingAccount.labelTotalDeposits'|translate}}</td>
+              <td>{{savingsAccountData.currency.displaySymbol}}&nbsp;{{savingsAccountData.summary.totalDeposits | money}}</td>
             </tr>
-            <tr *ngIf="savingsAccountData.summary.totalInterestEarned >= 0">
-              <td>Total Interest Earned</td>
-              <td>{{savingsAccountData.currency.displaySymbol}}&nbsp;{{savingsAccountData.summary.totalInterestEarned}}</td>
+            <tr *ngIf="savingsAccountData.summary.totalWithdrawals">
+              <td>{{'Saving_Account_Component.ViewSavingAccount.labelTotalWithdrawls'|translate}}</td>
+              <td>{{savingsAccountData.currency.displaySymbol}}&nbsp;{{savingsAccountData.summary.totalWithdrawals | money}}</td>
             </tr>
+<!--            <tr *ngIf="savingsAccountData.summary.totalInterestEarned >= 0">-->
+<!--              <td>Total Interest Earned</td>-->
+<!--              <td>{{savingsAccountData.currency.displaySymbol}}&nbsp;{{savingsAccountData.summary.totalInterestEarned}}</td>-->
+<!--            </tr>-->
           </table>
         </div>
 
