--- a/src/app/savings/savings-account-view/transactions-tab/transactions-tab.component.html
+++ b/src/app/savings/savings-account-view/transactions-tab/transactions-tab.component.html
@@ -1,60 +1,90 @@
 <div class="tab-container mat-typography">
+  <div fxLayout="column" fxLayoutAlign="start">
+    <div class="container m-b-20" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
+      <mat-form-field fxFlex="31%">
+        <mat-label>{{'Saving_Account_Component.tabTransactions.labelTransactionDateFrom' | translate}}</mat-label>
+        <input matInput [matDatepicker]="transactionDateFromPicker" [formControl]="transactionDateFrom">
+        <mat-datepicker-toggle matSuffix [for]="transactionDateFromPicker"></mat-datepicker-toggle>
+        <mat-datepicker #transactionDateFromPicker></mat-datepicker>
+      </mat-form-field>
 
-  <div fxLayout="row" fxLayoutAlign="start">
-    <div class="m-b-10">
-      <h3>All Transactions</h3>
+      <mat-form-field fxFlex="31%">
+        <mat-label>{{'Saving_Account_Component.tabTransactions.labelTransactionDateTo' | translate}}</mat-label>
+        <input matInput [matDatepicker]="transactionDateToPicker" [formControl]="transactionDateTo">
+        <mat-datepicker-toggle matSuffix [for]="transactionDateToPicker"></mat-datepicker-toggle>
+        <mat-datepicker #transactionDateToPicker></mat-datepicker>
+      </mat-form-field>
+      <div class="action-button" fxFlex="31%" fxLayoutAlign="end" style="height: 50px" fxLayout="row" fxLayoutGap="20px">
+        <button mat-raised-button (click)="getData()" color="primary">Tìm kiếm</button>
+        <button mat-raised-button color="primary" [routerLink]="['export']">Báo cáo</button>
+      </div>
     </div>
-    <div class="action-button m-b-20" fxLayout="row" fxLayoutGap="20px" *ngIf="checkStatus()">
-      <button mat-raised-button color="primary" [routerLink]="['/accounting', 'journal-entries']">View Journal Entries</button>
-      <button mat-raised-button color="primary" [routerLink]="['export']">Export</button>
+    <div class="container m-b-20" [formGroup]="form" fxLayout="row wrap" fxLayoutGap="2%" fxLayout.lt-md="column">
+      <mat-form-field fxFlex="31%">
+        <mat-label>{{'Kiểu giao dịch' | translate}}</mat-label>
+        <input formControlName="paymentDetail" matInput>
+      </mat-form-field>
+
+      <mat-form-field fxFlex="31%">
+        <mat-label>{{'Loại giao dịch' | translate}}</mat-label>
+        <input formControlName="txnCode" matInput>
+      </mat-form-field>
+      <mat-form-field fxFlex="31%">
+        <mat-label>{{'Ghi chú' | translate}}</mat-label>
+        <input formControlName="note" matInput>
+      </mat-form-field>
     </div>
   </div>
-
   <div class="mat-elevation-z1 m-b-25">
 
-    <table mat-table [dataSource]="dataSource" >
+    <table mat-table [dataSource]="dataSource">
 
       <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef> ID </th>
+        <th mat-header-cell *matHeaderCellDef> ID</th>
         <td mat-cell *matCellDef="let transaction"> {{ transaction.id }} </td>
       </ng-container>
 
       <ng-container matColumnDef="transactionDate">
-        <th mat-header-cell *matHeaderCellDef> Transaction Date </th>
+        <th mat-header-cell *matHeaderCellDef> Transaction Date</th>
         <td mat-cell *matCellDef="let transaction"> {{ transaction.date | date }} </td>
       </ng-container>
 
       <ng-container matColumnDef="transactionType">
-        <th mat-header-cell *matHeaderCellDef> Transaction Type </th>
+        <th mat-header-cell *matHeaderCellDef> Transaction Type</th>
         <td mat-cell *matCellDef="let transaction"> {{ transaction.transactionType.value  }} </td>
       </ng-container>
 
       <ng-container matColumnDef="debit">
-        <th mat-header-cell *matHeaderCellDef> Debit </th>
-        <td mat-cell *matCellDef="let transaction"> {{ isDebit(transaction.transactionType) ? transaction.amount : 'N/A'}} </td>
+        <th mat-header-cell *matHeaderCellDef> Debit</th>
+        <td mat-cell
+            *matCellDef="let transaction"> {{ isDebit(transaction.transactionType) ? (transaction.amount | money) : 'N/A'}} </td>
       </ng-container>
 
       <ng-container matColumnDef="credit">
-        <th mat-header-cell *matHeaderCellDef> Credit </th>
-        <td mat-cell *matCellDef="let transaction"> {{ !isDebit(transaction.transactionType) ? transaction.amount : 'N/A' }} </td>
+        <th mat-header-cell *matHeaderCellDef> Credit</th>
+        <td mat-cell
+            *matCellDef="let transaction"> {{ !isDebit(transaction.transactionType) ? (transaction.amount| money) : 'N/A' }} </td>
       </ng-container>
 
-      <ng-container matColumnDef="balance">
-        <th mat-header-cell *matHeaderCellDef> {{'Saving_Account_Component.tabTransactions.labelBalance'|translate}} </th>
-        <td mat-cell *matCellDef="let transaction"> {{ transaction.runningBalance | money }} </td>
-      </ng-container>
+<!--      <ng-container matColumnDef="balance">-->
+<!--        <th mat-header-cell-->
+<!--            *matHeaderCellDef> {{'Saving_Account_Component.tabTransactions.labelBalance'|translate}} </th>-->
+<!--        <td mat-cell *matCellDef="let transaction"> {{ transaction.runningBalance | money }} </td>-->
+<!--      </ng-container>-->
 
-      <ng-container matColumnDef="viewReciept">
-        <th mat-header-cell *matHeaderCellDef> View Reciept </th>
-        <td mat-cell *matCellDef="let transaction">
-          <button class="account-action-button" mat-raised-button color="primary" (click)="routeEdit($event)" [routerLink]="[transaction.id, 'reciept']">
-            <i class="fa fa-file" matTooltip="View Reciept"></i>
-          </button>
-        </td>
-      </ng-container>
+<!--      <ng-container matColumnDef="viewReciept">-->
+<!--        <th mat-header-cell *matHeaderCellDef> View Reciept</th>-->
+<!--        <td mat-cell *matCellDef="let transaction">-->
+<!--          <button class="account-action-button" mat-raised-button color="primary" (click)="routeEdit($event)"-->
+<!--                  [routerLink]="[transaction.id, 'reciept']">-->
+<!--            <i class="fa fa-file" matTooltip="View Reciept"></i>-->
+<!--          </button>-->
+<!--        </td>-->
+<!--      </ng-container>-->
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="select-row" (click)="showTransactions(row)"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="select-row"
+          (click)="showTransactions(row)"></tr>
 
     </table>
 
